edits to gamm plots and minor text fixes

--- a/output/papers/Swehvd-acoustics.Rmd
+++ b/output/papers/Swehvd-acoustics.Rmd
@@ -352,7 +352,7 @@ The vowel phonemes of Central Swedish are most often described as /`r linguistic
 
 Central Swedish is furthermore defined by three levels of lip-rounding, where the rounded vowels are traditionally referred to as either inrounded, with an extreme narrowing of the lips---[`r linguisticsdown::cond_cmpl("ʉː")`] and [`r linguisticsdown::cond_cmpl("uː")`], or outrounded, with less degree of lip narrowing and more protruded lips---[`r linguisticsdown::cond_cmpl("yː")`], [`r linguisticsdown::cond_cmpl("øː")`], [`r linguisticsdown::cond_cmpl("oː")`] [@fant1971]. Previous work has stressed the importance of lip-rounding for some category distinctions among closely located high vowels. For instance, [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`] have been described as overlapping in F1-F2 space, but exhibiting increased separability when F3 is considered [e.g., @fant1959; @fant1969; @fujimura1967; @kuronen2000].
 
-The 9 long-short vowel pairs differ systematically in duration, with short-long vowel to vowel ratios reported to be on average .65-.67 for Central Swedish [e.g., @elert1964; @kuronen2000; @strangert2001]. However, spectral cues also convey information for vowel pair distinctions, with previous studies finding F2 to carry most of the durational variation [e.g., @kuronen2000; @Lindblom1963]. The largest spectral differences between long and short vowel pairs have been found for [`r linguisticsdown::cond_cmpl("ʉː")`] - [`r linguisticsdown::cond_cmpl("ɵ")`], and [`r linguisticsdown::cond_cmpl("ɑː")`] - [`r linguisticsdown::cond_cmpl("a")`], and the smallest differences for [`r linguisticsdown::cond_cmpl("ɛː")`] - [`r linguisticsdown::cond_cmpl("ɛ")`], [`r linguisticsdown::cond_cmpl("øː")`] - [`r linguisticsdown::cond_cmpl("ø")`] [e.g., @kuronen2000]. Perceptual studies have confirmed that duration is primary cue to [`r linguisticsdown::cond_cmpl("ɛː")`] - [`r linguisticsdown::cond_cmpl("ɛ")`] and [`r linguisticsdown::cond_cmpl("øː")`] - [`r linguisticsdown::cond_cmpl("ø")`], but also to [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("ɪ")`], and [`r linguisticsdown::cond_cmpl("oː")`] - [`r linguisticsdown::cond_cmpl("ɔ")`] [e.g., @behne-kirk1997; @haddingkoch1964]. The extent to which *all* vowel pairs are more or less dependent on duration is less known.^[For a extensive phonological study on the Swedish quantity system, see @schaeffler2005.]
+The 9 long-short vowel pairs differ systematically in duration, with short-long vowel to vowel ratios reported to be on average .65-.67 for Central Swedish [e.g., @elert1964; @kuronen2000; @strangert2001]. However, spectral cues also convey information for vowel pair distinctions, with previous studies finding F2 to carry most of the durational variation [e.g., @kuronen2000; @lindblom1963]. The largest spectral differences between long and short vowel pairs have been found for [`r linguisticsdown::cond_cmpl("ʉː")`] - [`r linguisticsdown::cond_cmpl("ɵ")`], and [`r linguisticsdown::cond_cmpl("ɑː")`] - [`r linguisticsdown::cond_cmpl("a")`], and the smallest differences for [`r linguisticsdown::cond_cmpl("ɛː")`] - [`r linguisticsdown::cond_cmpl("ɛ")`], [`r linguisticsdown::cond_cmpl("øː")`] - [`r linguisticsdown::cond_cmpl("ø")`] [e.g., @kuronen2000]. Perceptual studies have confirmed that duration is primary cue to [`r linguisticsdown::cond_cmpl("ɛː")`] - [`r linguisticsdown::cond_cmpl("ɛ")`] and [`r linguisticsdown::cond_cmpl("øː")`] - [`r linguisticsdown::cond_cmpl("ø")`], but also to [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("ɪ")`], and [`r linguisticsdown::cond_cmpl("oː")`] - [`r linguisticsdown::cond_cmpl("ɔ")`] [e.g., @behne-kirk1997; @haddingkoch1964]. The extent to which *all* vowel pairs are more or less dependent on duration is less known.^[For a extensive phonological study on the Swedish quantity system, see @schaeffler2005.]
 
 Several of the long vowels in Central Swedish tend to diphthongize in their phonetic realization. This diphthongization is prosodically conditioned and is the strongest in stressed vowels [e.g., @bleckert1987; @leinonen2010].^[In general, true phonological diphthongs are not considered part of the phonological inventory of Central Swedish [@eliasson2022].] Previous studies have characterized the diphthongal glide in the later part of the long vowels as either a centralization of the vowel segment towards [`r linguisticsdown::cond_cmpl("ə")`] or a more open quality, or as a consonantal offglide [e.g., @elert1981; @elert2000; @fant1969; @fant1971; @kuronen2000; @mcallister1974; @pelzer-boersma2019; @riad2014]. Results are inconclusive as to how widespread diphthongization is across the vowel space, and what direction it takes. Most work has however found substantial diphthongization towards a more open quality for the mid and mid-high vowels [`r linguisticsdown::cond_cmpl("eː")`], [`r linguisticsdown::cond_cmpl("øː")`] and [`r linguisticsdown::cond_cmpl("oː")`] [e.g., @eklund1997; @elert2000; @fant1969; @pelzer-boersma2019], and in addition, that diphthongization cues category distinctions for several of the high vowels ([`r linguisticsdown::cond_cmpl("iː")`], [`r linguisticsdown::cond_cmpl("yː")`], [`r linguisticsdown::cond_cmpl("ʉː")`], and [`r linguisticsdown::cond_cmpl("uː")`]) [e.g., @fant1971; @kuronen2000]. For instance, @kuronen2000 concluded that [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("eː")`], and [`r linguisticsdown::cond_cmpl("uː")`] - [`r linguisticsdown::cond_cmpl("oː")`], differed in formant patterns only at later time-points of the vowel for some talkers in his study. He also found that the contrast between [`r linguisticsdown::cond_cmpl("ɛː")`] and [`r linguisticsdown::cond_cmpl("æː")`] was maintained solely by trajectory movements. Overall, less is known about the formant dynamics in the short vowels, given the almost exclusive focus on the long vowels in studies on diphthongization.
 
@@ -426,7 +426,7 @@ d.Swehvd.Swedia <- d.SweDia2000.forStudy.long %>%
 
 # General methods {#sec:methods}
 ## Measuring acoustic cues to vowel identity
-Following most vowel descriptions, this study reports acoustic measurements and visualizations of the first three formants (F1, F2, F3), as well as fundamental frequency (F0). While F0 is not considered an important cue to vowel identity in itself, it is known to vary between languages, dialects and speech styles [@ref].^[For demonstrations that F0 can, however, have strong *in*direct effects on vowel categorization, see @barreda-nearey2012.] Measurements of vowel duration are included to capture the systematic quantity distinction between long-short vowel pairs in Central Swedish.
+Following most vowel descriptions, this study reports acoustic measurements and visualizations of the first three formants (F1, F2, F3), as well as fundamental frequency (F0). While F0 is not considered an important cue to vowel identity in itself, it is known to vary between languages, dialects and speech styles [@refs].^[For demonstrations that F0 can, however, have strong *in*direct effects on vowel categorization, see @barreda-nearey2012.] Measurements of vowel duration are included to capture the systematic quantity distinction between long-short vowel pairs in Central Swedish.
 
 The Swedish version of the Montreal Forced Aligner developed by @young2021 was used to obtain estimates of word and segment boundaries. The boundaries were then manually corrected by the author (an L1-talker of Swedish). The formant analysis was carried out in Praat [@boersma-weenink2022], using the Burg algorithm to extract estimates of the first three formants (F1-F3) at five time-points of the vowel (20, 35, 50, 65, 80% into the vowel). The following parameterization of the Burg algorithm was used:
 
@@ -781,12 +781,12 @@ B. smooth terms & edf & Ref.df & F-value & p-value \\
 
 ```{r m-F3-long, message=FALSE, fig.width=base.width*3, fig.height=base.height*2.5, out.width='60%', fig.align='center', fig.cap="(ref:m-F3-long)"}
 # Add plot of GAMM for y, u, i for short and long
-itsadug::plot_smooth(m.F3.long, view = "Location", plot_all = "category", col = c("#66C2A5", "#FC8D62", "#8DA0CB"), print.summary = FALSE)
+itsadug::plot_smooth(m.F3, view = "Location", plot_all = "category", col = c("#66C2A5", "#FC8D62", "#8DA0CB"), print.summary = FALSE, cond = list(category = c("[iː]", "[yː]", "[ʉː]")))
 ```
 (ref:m-F3-short) Smooths and 95% confidence intervals for [`r linguisticsdown::cond_cmpl("ɪ")`], [`r linguisticsdown::cond_cmpl("ʏ")`] and [`r linguisticsdown::cond_cmpl("ɵ")`], respectively.
 
 ```{r m-F3-short, message=FALSE, fig.width=base.width*3, fig.height=base.height*2.5, out.width='60%', fig.align='center', fig.cap="(ref:m-F3-short)"}
-itsadug::plot_smooth(m.F3.short, view = "Location", plot_all = "category", col = c("#1B9E77", "#D95F02", "#7570B3"), print.summary = FALSE)
+itsadug::plot_smooth(m.F3.short, view = "Location", plot_all = "category", col = c("#1B9E77", "#D95F02", "#7570B3"), print.summary = FALSE, cond = list(category = c("[ɪ]", "[ʏ]", "[ɵ]")))
 ```
 
 In SI \@ref(sec:SI-talker-specific), the long vowels are plotted by talker to investigate the extent to which talkers in the SwehVd database produce overlapping [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`] (Figures \@ref(fig:SI-talker-specific-female), \@ref(fig:SI-talker-specific-male)). In general, most talkers produce these two vowels very close in F1-F2 space, with a slight separation in F2-F3 space. However, for some talkers, there is a continued overlap even when considering F3, which suggests either a need for additional cues for a stable category distinction, or a possible merger in process. For reference, one talker of each type are displayed in Figure \@ref(fig:swe-merge). 
@@ -1275,6 +1275,13 @@ Figure \@ref(fig:trajectories) displays the formant trajectories across all 5 ti
 
 The trajectory patterns were not unambiguously consistent, which might suggest some uncertainty around the measurement estimates. However, there was nevertheless a general tendency of movement towards a more central vowel quality in most of the vowels, both long and short, as well as a clear diphthongization in [`r linguisticsdown::cond_cmpl("eː")`] and [`r linguisticsdown::cond_cmpl("oː")`], which replicates previous work [e.g., @eklund1997; @elert2000; @pelzer-boersma2019]. The high vowels [`r linguisticsdown::cond_cmpl("iː")`], [`r linguisticsdown::cond_cmpl("yː")`], [`r linguisticsdown::cond_cmpl("ʉː")`] and [`r linguisticsdown::cond_cmpl("uː")`] tend to be realized with an offglide, according to previous work [e.g., @bleckert1987; @elert2000]. This would generate a falling F1 for all four vowels, a rising F2 for [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`] and a falling F2 for [`r linguisticsdown::cond_cmpl("ʉː")`] and [`r linguisticsdown::cond_cmpl("uː")`]. These predictions were borne out for F1 in all cases, but for F2, only for [`r linguisticsdown::cond_cmpl("ʉː")`]. [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`] display very little movement along F2, whereas [`r linguisticsdown::cond_cmpl("uː")`] moves towards a more central quality, possibly indicating diphthongization ending in [`r linguisticsdown::cond_cmpl("ə")`] rather than a consonantal offglide.
 
+(ref:m-F2) Smooths and 95% confidence intervals for [`r linguisticsdown::cond_cmpl("iː")`], [`r linguisticsdown::cond_cmpl("yː")`] and [`r linguisticsdown::cond_cmpl("ʉː")`], respectively.
+
+```{r m-F2, message=FALSE, fig.width=base.width*3, fig.height=base.height*2.5, out.width='60%', fig.align='center', fig.cap="(ref:m-F2)"}
+# Add plot of GAMM for e and o
+itsadug::plot_smooth(m.F2, view = "Location", plot_all = "category", col = c("#FB9A99", "#A6CEE3", "#FFD92F"), print.summary = FALSE, cond = list(category = c("[eː]", "[oː]", "[øː]")))
+```
+
 ```{r}
 # Model all cues
 d.model.all.cues <- d.SwehVd %>%
@@ -1495,7 +1502,7 @@ Figure \@ref(fig:db-comparison) displays the category movements in F1-F2 space a
 
 Figure \@ref(fig:db-comparison) further demonstrates changes in the front part of the space that seem to suggest a series of consecutive movements, where the most fronted vowels, [`r linguisticsdown::cond_cmpl("eː")`], [`r linguisticsdown::cond_cmpl("ɪ")`], [`r linguisticsdown::cond_cmpl("ʏ")`], all have traveled further up and front in SwehVd, while [`r linguisticsdown::cond_cmpl("iː")`], [`r linguisticsdown::cond_cmpl("yː")`] and [`r linguisticsdown::cond_cmpl("ʉː")`] have centralized.
 
-Finally, Figure \@ref(fig:db-comparison) shows that [`r linguisticsdown::cond_cmpl("ɛː")`] have lowered substantially compared to SweDia, down to a position almost overlapping with [`r linguisticsdown::cond_cmpl("æː")`] (and with [`r linguisticsdown::cond_cmpl("æ")`]; recall Figure \@ref(fig:swe-vowels)). [`r linguisticsdown::cond_cmpl("æː")`] has in turn moved further down, presumably constrained by the lower bound and hence cannot move further. This lowering of [`r linguisticsdown::cond_cmpl("ɛː")`] was anticipated by @riad2014 almost 10 years ago, and furthermore noted by @leinonen2000 and @pelzer-boersma2019.
+Finally, Figure \@ref(fig:db-comparison) shows that [`r linguisticsdown::cond_cmpl("ɛː")`] have lowered substantially compared to SweDia, down to a position almost overlapping with [`r linguisticsdown::cond_cmpl("æː")`] (and with [`r linguisticsdown::cond_cmpl("æ")`]; recall Figure \@ref(fig:swe-vowels)). [`r linguisticsdown::cond_cmpl("æː")`] has in turn moved further down, presumably constrained by the lower bound and hence cannot move further. This lowering of [`r linguisticsdown::cond_cmpl("ɛː")`] was anticipated by @riad2014 almost 10 years ago, and furthermore noted by @leinonen2010 and @pelzer-boersma2019.
 
 (ref:db-comparison) Vowel category movements in the Central Swedish vowel space from 1999 to 2023, in F1-F2. The arrow indicates the direction of movement over time, with base of arrow representing SweDia (vowel label) and tip of arrow representing SwehVd. Vowel data is averaged across talkers in the two datasets.
 
@@ -1886,7 +1893,7 @@ m.Å <- lmerTest::lmer(orth_proj ~ Database + (1|Word) + (1|Talker), data = d.or
 
 # General discussion {#sec:discussion}
 <!--reiterate and stress why the acoustic description was necessary, different and a contribution to existing reports of swedish vowels,more comprehensive insights into formant trajectories within and between quantities...report more results for F3???-->
-This study has investigated the acoustic cues to vowel identity in modern-day Central Swedish, using acoustic descriptions and regression models. The purpose was to present an up-to-date acoustic analysis and investigate the scope and spread of previously reported changes in the vowel space [e.g., @pelzer-boersma2019; @schotz2011]. The results of the acoustic analyses indicated that the most important cues to vowel identity were F1, F2 and duration, which replicated previous work [e.g., @kuronen2000; @Lindblom1963]. The results furthermore suggested that static measurements, while informative, were insufficient to accurately capture the spectral acoustics of some vowels. A more exhaustive description can be achieved by including dynamic analyses, as shown in this paper. This was especially true for the [`r linguisticsdown::cond_cmpl("ɛː")`] - [`r linguisticsdown::cond_cmpl("æː")`],  [`r linguisticsdown::cond_cmpl("uː")`] - [`r linguisticsdown::cond_cmpl("oː")`] and [`r linguisticsdown::cond_cmpl("eː")`] - [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`] distinctions, given the direction and scope of formant trajectory movements across the vowel segment [e.g., @kuronen2000]. Of note, the short vowels displayed substantial formant movements, which seems to signal the importance of vowel dynamics for long and short vowels alike.<!--TODO: c.f. the use of moving windows for perceptual studies--> This has been shown in work on other languages [@refs], but has largely been lacking in studies on Swedish.
+This study has investigated the acoustic cues to vowel identity in modern-day Central Swedish, using acoustic descriptions and regression models. The purpose was to present an up-to-date acoustic analysis and investigate the scope and spread of previously reported changes in the vowel space [e.g., @pelzer-boersma2019; @schotz2011]. The results of the acoustic analyses indicated that the most important cues to vowel identity were F1, F2 and duration, which replicated previous work [e.g., @kuronen2000; @lindblom1963]. The results furthermore suggested that static measurements, while informative, were insufficient to accurately capture the spectral acoustics of some vowels. A more exhaustive description can be achieved by including dynamic analyses, as shown in this paper. This was especially true for the [`r linguisticsdown::cond_cmpl("ɛː")`] - [`r linguisticsdown::cond_cmpl("æː")`],  [`r linguisticsdown::cond_cmpl("uː")`] - [`r linguisticsdown::cond_cmpl("oː")`] and [`r linguisticsdown::cond_cmpl("eː")`] - [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`] distinctions, given the direction and scope of formant trajectory movements across the vowel segment [e.g., @kuronen2000]. Of note, the short vowels displayed substantial formant movements, which seems to signal the importance of vowel dynamics for long and short vowels alike.<!--TODO: c.f. the use of moving windows for perceptual studies--> This has been shown in work on other languages [@refs], but has largely been lacking in studies on Swedish.
 
 The acoustic characteristics of SwehVd were subsequently compared to that of 8 reference talkers from the SweDia materials, recorded approximately one generation ago. This was done in order to assess to what extent vowels might have shifted over the last 20 years. Several vowels had shifted quite substantially compared to previous work on Central Swedish. Two of the most important shifts concerned the fronting of [`r linguisticsdown::cond_cmpl("ɪ")`] and [`r linguisticsdown::cond_cmpl("ʏ")`] and the centralization of [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`], where [`r linguisticsdown::cond_cmpl("ɪ")`] and [`r linguisticsdown::cond_cmpl("ʏ")`] appear to maintain their positions as high front vowels, while [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`] centralize to the mid-center part of the space. [c.f., @fant1969; @kuronen2000]. Given the rather small shift in the placement of [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`] in SwehVd compared to the reference materials, these changes may have begun already in 1999, and then continued throughout the first two decades of the 2000s, as indicated by the results in this paper and in @pelzer-boersma2019.^[Unfortunately, @pelzer-boersma2019 did not analyse the short vowels, it is therefore difficult to know whether the fronting of the short vowels was as pronounced in 2019.]
 
@@ -1898,7 +1905,7 @@ Impressionistic listening by the author supported the presence of a buzzing soun
 
 The changed placement of [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`] might have affected the surrounding front vowels. Interestingly, [`r linguisticsdown::cond_cmpl("eː")`] was *not* the most fronted vowel for some of the talkers that did not centralize [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`] (e.g., SW_005, SW_015, SW_020). This would seem to suggest that the fronted placement of [`r linguisticsdown::cond_cmpl("eː")`] might be conditioned on a more centralized position of [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`]. The order and cause of these events is of course unclear. For instance, the raising of [`r linguisticsdown::cond_cmpl("eː")`] could be pushing back [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`]---a push chain shift. Alternatively, the backing of [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`] could be pulling [`r linguisticsdown::cond_cmpl("eː")`] upwards---a pull chain shift [for reviews of chain shifts, see e.g., @king1969; @martinet1952]. A hypothesized pull chain shift scenario might involve further movements downstream, for instance, a centralization of [`r linguisticsdown::cond_cmpl("ʉː")`], a lowering of [`r linguisticsdown::cond_cmpl("oː")`] and [`r linguisticsdown::cond_cmpl("uː")`], or a general backing of the entire system. The vowel space as described here does not seem to support this. The movements of [`r linguisticsdown::cond_cmpl("eː")`] instead suggest a push chain shift, but what might be causing [`r linguisticsdown::cond_cmpl("eː")`] to move remains unclear, given that the neighbouring category [`r linguisticsdown::cond_cmpl("ɛː")`] substantially lowers. A future scenario might involve [`r linguisticsdown::cond_cmpl("eː")`] once more descending to a position closer to its shorter counterpart, and closer to the position it occupies in the latter part of the segment (see Figure \@ref(fig:trajectories)). This would potentially result in a sparser front space, possibly setting the stage for a more compact system overall.<!--borde detta inte innebära problem med sammanfall som man tänker att systemet vill undvika? och leder det då till nya förändringar för att öka avstånd osv?--> Future studies should investigate the support for either hypothesis in more detail for more insight into the possible causes of the movements.
 
-Other noticeable changes outside of the high front area concern [`r linguisticsdown::cond_cmpl("ɛː")`] and [`r linguisticsdown::cond_cmpl("œ")`], that have both lowered since 1999. The lowering of [`r linguisticsdown::cond_cmpl("ɛː")`] was anticipated by e.g., @riad2014, and confirmed in @leinonen2000 and @pelzer-boersma2019. Even if [`r linguisticsdown::cond_cmpl("œ")`] has lowered compared to SweDia, [`r linguisticsdown::cond_cmpl("øː")`] and [`r linguisticsdown::cond_cmpl("ø")`] are still located beneath [`r linguisticsdown::cond_cmpl("œ")`], which suggest a backing rather than lowering of /`r linguisticsdown::cond_cmpl("ø")`/ in position before retroflex segments [c.f., @riad2014]. Furthermore, the difference in placement of [`r linguisticsdown::cond_cmpl("œ")`] might results from a presence (SweDia) or lack of (SwehVd) neutralization of [`r linguisticsdown::cond_cmpl("ø")`] into [`r linguisticsdown::cond_cmpl("ɵ")`]. In both materials, [`r linguisticsdown::cond_cmpl("ø")`] appears in a context before a retroflex (SwehVd - *hörr*, SweDia - *dörr*), and in SweDia, [`r linguisticsdown::cond_cmpl("ø")`] is considerably closer to [`r linguisticsdown::cond_cmpl("ɵ")`] than in the SwehVd. If this result holds, it would suggest that the previously documented merger of short [`r linguisticsdown::cond_cmpl("ø")`] and [`r linguisticsdown::cond_cmpl("ɵ")`] might have lost its importance in Central Swedish over the last generation [e.g., @stahle1965; @wenner2010; but see @kotsinas1995 for younger Stockholm talkers].
+Other noticeable changes outside of the high front area concern [`r linguisticsdown::cond_cmpl("ɛː")`] and [`r linguisticsdown::cond_cmpl("œ")`], that have both lowered since 1999. The lowering of [`r linguisticsdown::cond_cmpl("ɛː")`] was anticipated by e.g., @riad2014, and confirmed in @leinonen2010 and @pelzer-boersma2019. Even if [`r linguisticsdown::cond_cmpl("œ")`] has lowered compared to SweDia, [`r linguisticsdown::cond_cmpl("øː")`] and [`r linguisticsdown::cond_cmpl("ø")`] are still located beneath [`r linguisticsdown::cond_cmpl("œ")`], which suggest a backing rather than lowering of /`r linguisticsdown::cond_cmpl("ø")`/ in position before retroflex segments [c.f., @riad2014]. Furthermore, the difference in placement of [`r linguisticsdown::cond_cmpl("œ")`] might results from a presence (SweDia) or lack of (SwehVd) neutralization of [`r linguisticsdown::cond_cmpl("ø")`] into [`r linguisticsdown::cond_cmpl("ɵ")`]. In both materials, [`r linguisticsdown::cond_cmpl("ø")`] appears in a context before a retroflex (SwehVd - *hörr*, SweDia - *dörr*), and in SweDia, [`r linguisticsdown::cond_cmpl("ø")`] is considerably closer to [`r linguisticsdown::cond_cmpl("ɵ")`] than in the SwehVd. If this result holds, it would suggest that the previously documented merger of short [`r linguisticsdown::cond_cmpl("ø")`] and [`r linguisticsdown::cond_cmpl("ɵ")`] might have lost its importance in Central Swedish over the last generation [e.g., @stahle1965; @wenner2010; but see @kotsinas1995 for younger Stockholm talkers].
 
 \begin{table}
 \caption{\label{tab:swehvd-vowels}The phonetic characterization of long (left) and short (right) Central Swedish vowels (as represented in the SwehVd database). Rounded vowels are shaded.}
