--- a/output/papers/Swehvd-acoustics.Rmd
+++ b/output/papers/Swehvd-acoustics.Rmd
@@ -319,6 +319,7 @@ d.SweDia2000 %<>%
 d.SweDia2000.forStudy <- d.SweDia2000 %>%
   # Remove bisyllabic word and ÄRR as this category is only recorded by 2 talkers
   filter(!is.na(F0), Word != "flytta", category != "[æ]") %>%
+  rename(timepoint = Location) %>%
   group_by(Database, Talker, Age, Gender, category, Word, Token, Trial, timepoint, Quantity) %>%
   summarise(across(c(F0, F1, F2, F3, Duration), ~ geometric.mean(.x))) %>%
   ungroup()
@@ -903,6 +904,32 @@ contrasts(d.model.all.cues$category) <- MASS::contr.sdif(21)
 # m.allcues.2 <- mgcv::bam(category ~ F0_log + F1_log + F2_log + F3_log + Duration + s(timepoint, by = category, k = 5), data = d.model.all.cues)
 # summary(m1)
 ```
+```{r message=FALSE}
+# Rename contrast labels
+d.model$category <- factor(d.model$category, labels = c("[ɪ]", "[iː]", "[ʏ]", "[yː]", "[ɵ]", "[ʉː]", "[ɛ]", "[eː]", "[ɛː]", "[æ]", "[æː]", "[ø]", "[øː]", "[œ]", "[œː]", "[a]", "[ɑː]", "[ɔ]", "[oː]", "[ʊ]", "[uː]"))
+
+m.F1 <- mgcv::bam(F1 ~ category + Gender + Quantity + s(timepoint, by = category, k = 5) 
+                  + s(Talker, bs = "re")  
+                  + s(Talker, category, bs = "re")
+                    # + s(timepoint, Talker,  by = category, bs = "fs", k = 5, m=1)
+                    , data = d.model)
+
+m.F2 <- mgcv::bam(F2 ~ category + Gender + Quantity + s(timepoint, by = category, k = 5) 
+                  + s(Talker, bs = "re")  
+                  + s(Talker, category, bs = "re")
+                    # + s(timepoint, Talker,  by = category, bs = "fs", k = 5, m=1)
+                    , data = d.model)
+
+m.F3 <- mgcv::bam(F3 ~ category + Gender + Quantity + s(timepoint, by = category, k = 5) 
+                  + s(Talker, bs = "re")  
+                  + s(Talker, category, bs = "re")
+                    # + s(timepoint, Talker,  by = category, bs = "fs", k = 5, m=1)
+                    , data = d.model)
+#summary(m.F1)
+# Code kept for reproducibility
+#gamtabs(m.F1, caption='Model summary, coefficients for parametric and smooth terms', label = "tab:m.F1")
+#gamtabs(m.F2, caption='Model summary, coefficients for parametric and smooth terms', label = "tab:m-F2")
+```
 
 (ref:m-F1) Fitted smooths for GAMM and 95% confidence intervals for [`r linguisticsdown::cond_cmpl("iː")`], [`r linguisticsdown::cond_cmpl("yː")`] and [`r linguisticsdown::cond_cmpl("ʉː")`], respectively.<!--add empirical data points on top of the smooths-->
 
@@ -966,33 +993,6 @@ B. smooth terms & edf & Ref.df & F-value & p-value \\
    \hline
 \end{tabular}
 \end{table}
-
-```{r message=FALSE}
-# Rename contrast labels
-d.model$category <- factor(d.model$category, labels = c("[ɪ]", "[iː]", "[ʏ]", "[yː]", "[ɵ]", "[ʉː]", "[ɛ]", "[eː]", "[ɛː]", "[æ]", "[æː]", "[ø]", "[øː]", "[œ]", "[œː]", "[a]", "[ɑː]", "[ɔ]", "[oː]", "[ʊ]", "[uː]"))
-
-m.F1 <- mgcv::bam(F1 ~ category + Gender + Quantity + s(timepoint, by = category, k = 5) 
-                  + s(Talker, bs = "re")  
-                  + s(Talker, category, bs = "re")
-                    # + s(timepoint, Talker,  by = category, bs = "fs", k = 5, m=1)
-                    , data = d.model)
-
-m.F2 <- mgcv::bam(F2 ~ category + Gender + Quantity + s(timepoint, by = category, k = 5) 
-                  + s(Talker, bs = "re")  
-                  + s(Talker, category, bs = "re")
-                    # + s(timepoint, Talker,  by = category, bs = "fs", k = 5, m=1)
-                    , data = d.model)
-
-m.F3 <- mgcv::bam(F3 ~ category + Gender + Quantity + s(timepoint, by = category, k = 5) 
-                  + s(Talker, bs = "re")  
-                  + s(Talker, category, bs = "re")
-                    # + s(timepoint, Talker,  by = category, bs = "fs", k = 5, m=1)
-                    , data = d.model)
-#summary(m.F1)
-# Code kept for reproducibility
-#gamtabs(m.F1, caption='Model summary, coefficients for parametric and smooth terms', label = "tab:m.F1")
-#gamtabs(m.F2, caption='Model summary, coefficients for parametric and smooth terms', label = "tab:m-F2")
-```
 
 (ref:m-F3-long) Fitted smooths of GAMM and 95% confidence intervals for [`r linguisticsdown::cond_cmpl("iː")`], [`r linguisticsdown::cond_cmpl("yː")`] and [`r linguisticsdown::cond_cmpl("ʉː")`], respectively.
 
@@ -1909,7 +1909,7 @@ p.20_50 <- p %+%
   (d.SwehVd.forStudy.long.static %>%
   filter(Normalization.Type == "Nearey's uniform scaling (log)", timepoint %in% c(20,35,50)) %>%
   # Get the geometric mean F1-F2 across the five time points
-  group_by(Talker, Gender, category, Token, Quantity) %>%
+  group_by(Normalization.Type, Talker, Gender, category, Token, Quantity) %>%
   summarise(across(c(F0, F1, F2, F3, Duration), ~ mean(.x)))) +
   guides(shape = "none")
 
@@ -1917,7 +1917,7 @@ p.35_65 <- p %+%
   (d.SwehVd.forStudy.long.static %>%
   filter(Normalization.Type == "Nearey's uniform scaling (log)", timepoint %in% c(35,50,65)) %>%
   # Get the geometric mean F1-F2 across the five time points
-  group_by(Talker, Gender, category, Token, Quantity) %>%
+  group_by(Normalization.Type, Talker, Gender, category, Token, Quantity) %>%
   summarise(across(c(F0, F1, F2, F3, Duration), ~ mean(.x)))) +
   guides(shape = "none")
 
@@ -1930,7 +1930,7 @@ p.50_80 <- p %+%
   (d.SwehVd.forStudy.long.static %>%
   filter(Normalization.Type == "Nearey's uniform scaling (log)", timepoint %in% c(50,65,80)) %>%
   # Get the geometric mean F1-F2 across the five time points
-  group_by(Talker, Gender, category, Token, Quantity) %>%
+  group_by(Normalization.Type, Talker, Gender, category, Token, Quantity) %>%
   summarise(across(c(F0, F1, F2, F3, Duration), ~ mean(.x)))) +
   guides(shape = "none")
 
