remove footnote on coart; edits to bib-file; edited through conclusions and discussion

--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -279,6 +279,15 @@
   file = {/Users/anpe7128/Zotero/storage/M7297776/Engstrand m. fl. - Hur udda är Viby-i Experimentella och typologiska.pdf}
 }
 
+@inproceedings{eriksson2004,
+  author={Eriksson, Anders},
+  title={SweDia 2000: A Swedish dialect database.},
+  year=2004,
+  editor={Henrichsen, P. J.},
+  booktitle={Babylonian confusion resolved. Proceedings of the Nordic symposium on the comparison of languages, no. 1 in Copenhagen Working Papers in LSP},
+  pages={33--48}
+}
+
 @article{fant1959,
   title = {Acoustic Analysis and Synthesis of Speech with Applications to Swedish},
   author = {Fant, Gunnar},
@@ -473,6 +482,18 @@
   file = {/Users/anpe7128/Zotero/storage/I24LWKJ8/Hillenbrand and Nearey - 1999 - Identification of resynthesized hVd utterances .pdf}
 }
 
+@article{jacewicz-fox2018,
+  title = {Regional variation in fundamental frequency of American English vowels},
+  author = {Jacewicz, Ewa and Fox, Robert Allen},
+  year = {2018},
+  journal = {Phonetica},
+  volume = {75},
+  number = {4},
+  pages = {273--309},
+  issn = {0031-8388},
+  doi = {10.1159/000484610}
+}
+
 @incollection{johnson-sjerps2021,
   title = {Speaker Normalization in Speech Perception},
   booktitle = {The Handbook of Speech Perception},
@@ -590,8 +611,6 @@
   publisher = {{DEPARTMENT OF FINNISH LANGUAGE AND GENERAL LINGUISTICS UNIVERSITY OF TAMPERE}},
   address = {{Tampere, Finland}}
 }
-
-PUBLICATIONS- , NO 7, 163–218.
 
 @article{leinonen2010,
   title = {An {{Acoustic Analysis}} of {{Vowel Pronunciation}} in {{Swedish Dialects}}},
@@ -817,6 +836,21 @@ PUBLICATIONS- , NO 7, 163–218.
   isbn = {978-91-7305-935-0},
   langid = {english},
   file = {/Users/anpe7128/Zotero/storage/IXV25BU4/Schaeffler - 2005 - Phonological quantity in swedish dialects typolog.pdf}
+}
+
+@article{schertz-clare2019,
+  author = {Schertz, Jessamyn and Clare, Emily J.},
+  title = {Phonetic cue weighting in perception and production},
+  journal = {WIREs Cognitive Science},
+  volume = {11},
+  number = {2},
+  pages = {e1521},
+  keywords = {cue weighting, phonetics, speech perception, speech production},
+  doi = {https://doi.org/10.1002/wcs.1521},
+  url = {https://wires.onlinelibrary.wiley.com/doi/abs/10.1002/wcs.1521},
+  eprint = {https://wires.onlinelibrary.wiley.com/doi/pdf/10.1002/wcs.1521},
+  abstract = {Abstract Speech sound contrasts differ along multiple phonetic dimensions. During speech perception, listeners must decide which cues are relevant, and determine the relative importance of each cue, while also integrating other, signal-external cues. The comparison of cue weighting in perception and production bears on a range of theoretical issues including the processes underlying sound change, the time course of learning, the nature of cues, and the perception-production interface. Research examining the relative alignment of cue weighting across the modalities, on both a community and individual level, has revealed both parallels and asymmetries between the modalities. The extraordinarily wide range of ways that have been used to conceptualize and quantify cue weights reflects the inherent theoretical, methodological, and analytical differences between the two modalities. More consideration of the choices of analytical metrics, explicit discussion of the theoretical assumptions that underlie them, and systematic investigations of different types of cues will lead to more generalizable findings that can be incorporated into computational implementable models of speech processing. This article is categorized under: Linguistics > Language in Mind and Brain Psychology > Language},
+  year = {2020}
 }
 
 @inproceedings{schotz2011,
