edits to text and gamms

--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -988,10 +988,9 @@ year = {2018}
   title = {N\"ar L\"ognare Blir Lugnare},
   author = {Wenner, Lena},
   year = {2010},
-  series = {Skrifter Utgivna Av {{Institutionen}} F\"or Nordiska Spr\aa k Vid {{Uppsala}} Universitet 80},
-  abstract = {Wenner, L., 2010: N\"ar l\"ognare blir lugnare. En sociofonetisk studie av sammanfallet mellan kort \"o och kort u i uppl\"andskan. (When l\"ognare becomes lugnare. A sociophonetic study of the merger between short \"o and short u in Uppland Swedish.) Skrifter utgivna av Institutionen f\"or nordiska spr\aa k vid Uppsala universitet 80. 163 pp. Uppsala. ISSN 0083-4661, ISBN 97891-506-2132-7.},
-  langid = {english},
-  file = {/Users/anpe7128/Zotero/storage/8P6YV7AH/Wenner - När lögnare blir lugnare.pdf}
+  publisher = {Uppsala Universitet},
+  address = {Uppsala},
+  series = {Skrifter Utgivna Av {{Institutionen}} F\"or Nordiska Spr\aa k Vid {{Uppsala}} Universitet 80}
 }
 
 @article{xie2023,
